# cuopt-examples

./: .gitignore  .gitmodules
GAMSPy_integration_example/: transport_cuopt.ipynb  trnsport_cuopt.ipynb
Pyomo_integration_example/: README.md  p_median_problem.ipynb
cflp_cuopt_milp/: README.md  cflp_cuopt_milp.ipynb
cuopt-agent/: .env.example  AGENTS.md  README.md
cuopt-agent/cuopt_agent/: pyproject.toml
cuopt-agent/cuopt_agent/configs/: config-deepagent-eval.yml  config-deepagent.yml
cuopt-agent/cuopt_agent/data/max_supply_what_ifs/eval/: max_supply_what_ifs.csv
cuopt-agent/cuopt_agent/data/max_supply_what_ifs/sample_prompts/: scenario_2.md  scenario_3.md
cuopt-agent/cuopt_agent/docker/: Dockerfile  Dockerfile.dev
cuopt-agent/cuopt_agent/src/nat_cuopt_agent/: register.py
cuopt-agent/cuopt_agent/src/nat_cuopt_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
cuopt-agent/cuopt_agent/src/nat_cuopt_agent/evaluator/: cuopt_evaluator.py
cuopt-agent/cuopt_agent/src/nat_cuopt_agent/function/: deepagent_fn.py  healthcheck_fn.py  register.py  subagent_factory.py  utils.py
cuopt-agent/deploy/compose/: docker-compose.dev.yml  docker-compose.yml
cuopt-agent/skills/: cuopt
cuopt_on_nemoclaw/: SETUP.md  nemoclaw_cuopt_setup.sh  probe_grpc.py
cuopt_on_nemoclaw/openclaw-skills/cuopt/: SKILL.md
cuopt_on_nemoclaw/utils/: merge_policy_entries.py  strip_policy_metadata.py
max_supply_agent/: .gitignore  README.md
max_supply_agent/cuopt_agent/configs/: config-deepagent-eval.yml  config-deepagent.yml
max_supply_agent/cuopt_agent/docker/: Dockerfile  Dockerfile.dev
max_supply_agent/deploy/compose/: docker-compose.dev.yml  docker-compose.yml
max_supply_agent/skills/cuopt-debugging/: SKILL.md
max_supply_agent/skills/cuopt-lp-milp/: SKILL.md
max_supply_agent/skills/problem-statement-parsing/: SKILL.md
portfolio_optimization/: QP_portfolio_optimization.ipynb  README.md  cvar_portfolio_optimization.ipynb
(+39 files in other folders)
