# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
prerelease = "allow"
extra-index-url = ["https://pypi.nvidia.com"]
# Force numpy<2.3 for cuOpt/numba; overrides nvidia-nat-core's numpy>=2.3
override-dependencies = ["numpy>=1.22,<2.3"]

[project]
name = "nat_cuopt_agent"
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = ">=3.11,<3.14"
description = "Reference deepagents agent for cuOpt leveraging the cuopt-lp-milp skill"
keywords = ["ai", "deepagents", "agents", "cuopt", "lp", "milp"]
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
# cuopt-cu12 pin must match the container base image (Dockerfile.dev FROM line).
# In-container: already satisfied, pip/uv skips it.  Local: pulled from pypi.nvidia.com.
dependencies = [
  "nvidia-nat[eval,langchain,phoenix,test] == 1.5.0rc2",
  "deepagents",
  "psutil",
  "sqlalchemy[asyncio]",
  "cuopt-cu12==26.2.*",
]

[project.entry-points.'nat.components']
nat_cuopt_agent = "nat_cuopt_agent.register"